# Home_work_beta

./: .gitignore  pyproject.toml
src/: decorators.py  generators.py  log.txt  log_func.py  masks.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
